--- a/GrpcService.Client/GrpcService.Client.csproj
+++ b/GrpcService.Client/GrpcService.Client.csproj
@@ -10,6 +10,7 @@
   <ItemGroup>
     <Protobuf Include="Protos\greet.proto" GrpcServices="Client" />
     <Protobuf Include="Protos\weather.proto" GrpcServices="Client" />
+    <Protobuf Include="Protos\chat.proto" GrpcServices="Client" />
     <PackageReference Include="Google.Protobuf" Version="3.30.1" />
     <PackageReference Include="Grpc.Net.Client" Version="2.70.0" />
     <PackageReference Include="Grpc.Tools" Version="2.71.0">
